--- a/index.css
+++ b/index.css
@@ -69,6 +69,15 @@ h5,
 p{
   font-family: Georgia;
 }
+/*CSS 16*/
+h1 {
+    font-family: Georgia;
+}
+
+h2 {
+    font-family: Georgia;
+}
+   
 
 
   
