--- a/index.css
+++ b/index.css
@@ -101,6 +101,28 @@ h1 {
 
 .image {
     background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/soccer.jpeg");
+}
+/*CSS 23 Project*/
+img{
+    height: 150px;
+  }
+  .description{
+    font-size: 20px;
+  }
+  #cook-time{
+    font-weight: bold;
+  }
+  .ingredients li{
+    list-style: square;
+  }
+  p,.time{
+    color: gray;
+  }
+  .external-link{
+    color: SeaGreen;
+  }
+  h1, h2, p, li{
+    font-family: Helvetica;
   }
 
 
