--- a/index.css
+++ b/index.css
@@ -124,6 +124,23 @@ img{
   h1, h2, p, li{
     font-family: Helvetica;
   }
+  /*CSS 24 Project*/
+  .header{
+    background-color: CornflowerBlue;
+    text-align: center;
+  }
+  .about-me{
+    font-size: 20px;
+    opacity: .5;
+  }
+  h1{
+    color: Azure;
+  }
+  body{
+    font-family: Georgia;
+      background-image: url('https://s3.amazonaws.com/codecademy-content/courses/learn-css-selectors-visual-rules/hypnotize_bg.png');
+  }
+  
 
 
 
