--- a/index.css
+++ b/index.css
@@ -214,13 +214,20 @@ h2 {
 /*CSS 32*/
 
 #main {
-    margin: auto 0;
+    margin: 0 auto;
 }
 .pull-quote {
-    margin: auto 0;
+    margin: 0 auto;
 }
 
-   
+/*CSS 33*/
+p {
+    min-width: 200px;
+    max-width: 800px;
+    min-height: 200px;
+    max-height: 300px;
+} 
+  
 
 
 
