--- a/index.css
+++ b/index.css
@@ -227,7 +227,12 @@ p {
     min-height: 200px;
     max-height: 300px;
 } 
-  
+
+/*CSS 34*/
+#main {
+    height: 1000px;
+    overflow: scroll;
+}
 
 
 
