--- a/index.css
+++ b/index.css
@@ -365,6 +365,28 @@ h1 {
     color: MidnightBlue;
 }
 
+/*CSS 51*/
+.green {
+    background-color: #8FBC8F;
+}
+  
+.light {
+    background-color:#A0522D;
+}
+  
+.city {
+    background-color:#8B4513;
+}
+  
+.vienna {
+    background-color: #A52A2A;
+}
+.italian {
+    background-color: #000000;
+}
+  
+
+
 
     
 
