--- a/index.css
+++ b/index.css
@@ -384,6 +384,21 @@ h1 {
 .italian {
     background-color: #000000;
 }
+
+/*CSS 52*/
+.green {
+    background-color: rgb(143, 188, 143);
+}
+  
+.light {
+    background-color: rgb(160, 82, 45);
+}
+  
+.city {
+    background-color: rgb(139, 69, 19);
+}
+  
+
   
 
 
