--- a/index.css
+++ b/index.css
@@ -415,6 +415,19 @@ h1 {
     background-color: #141212;
 }
 
+/*CSS 54*/
+body {
+    background-color: hsl(240, 100%, 80%);
+} 
+.midground {
+    background-color: hsl(225, 100%, 25%);
+}
+.foreground {
+    background-color: hsl(325, 50%, 50%);
+}
+
+
+  
 
   
 
