--- a/index.css
+++ b/index.css
@@ -555,6 +555,11 @@ h1 {
       font-family: Helvetica, sans-serif; 
 }
 
+/*CSS 67*/
+.space .sample .text{
+    font-family: "Space Mono", monospace;
+}
+  
 
     
   
