--- a/index.css
+++ b/index.css
@@ -577,6 +577,14 @@ h1 {
     src: local('Space Mono Bold'), local('SpaceMono-Bold'), url(https://fonts.gstatic.com/s/spacemono/v2/i7dMIFZifjKcF5UAWdDRaPpZUFWaHg.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
+/*CSS 69*/
+@font-face {
+    font-family: "Glegoo";
+    src: url(../fonts/Glegoo-Regular.ttf) format('truetype');
+}
+
+
   
 
     
