--- a/index.css
+++ b/index.css
@@ -640,6 +640,12 @@ h1 {
     grid-template: 40% 50% 50px / 100px 50% 200px;
 }
 
+/*CSS 75*/
+.grid {
+    grid-template: 1fr 1fr 1fr / 3fr 50% 1fr;
+}
+ 
+
   
   
 
