--- a/index.css
+++ b/index.css
@@ -649,6 +649,11 @@ h1 {
 .grid {
     grid-template: repeat(3, 1fr) / 3fr 50% 1fr;
 }
+/*CSS 77*/
+.grid {
+    grid-template: repeat(3, 1fr) / 3fr minmax(50px, 300px) 1fr;
+}
+    
 
 
   
