--- a/index.css
+++ b/index.css
@@ -653,6 +653,14 @@ h1 {
 .grid {
     grid-template: repeat(3, 1fr) / 3fr minmax(50px, 300px) 1fr;
 }
+
+/*CSS 78*/
+.grid {
+    grid-gap: 20px 5px;
+}
+
+
+
     
 
 
