--- a/index.css
+++ b/index.css
@@ -670,6 +670,17 @@ h1 {
     grid-row: 5 / 7;
 }
 
+/*CSS 81*/
+.a {
+    grid-column: 1 / span 2;
+}
+.b {
+      grid-column: 2 / span 6;
+      grid-row:  2 / span 3;
+}
+
+
+
 
     
 
