--- a/index.css
+++ b/index.css
@@ -687,6 +687,22 @@ h1 {
     grid-area: 2 / 2 / span 3 / span 6;
 }
 
+/*CSS 83*/ 
+.grid {
+    display: grid;
+    grid-template-columns: 25% 25% 2fr 1fr;
+    grid-template-rows: 200px 200px;
+    grid-row-gap: 10px;
+    grid-column-gap: 15px;
+}
+.a {
+    grid-column-start: 1;
+    grid-column-end: span 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+
 
     
 
