--- a/index.css
+++ b/index.css
@@ -702,6 +702,32 @@ h1 {
     grid-row-end: 3;
 }
 
+/*CSS 84*/
+.container {
+    grid-template-areas: "header header"
+                          "nav nav"
+                          "left right"
+                          "footer footer";
+    grid-template-columns: 200px 400px;
+    grid-template-rows: 150px 200px 600px 200px;
+}
+header {
+    grid-area: header;
+}
+nav {
+    grid-area: nav;
+}
+.left {
+    grid-area: left;
+}
+.right {
+    grid-area: right;
+}
+footer {
+    grid-area: footer;
+}
+
+
 
 
     
