--- a/index.css
+++ b/index.css
@@ -727,6 +727,21 @@ footer {
     grid-area: footer;
 }
 
+/*CSS 85*/
+.left {
+    grid-area: 4 / 1 / 9 / 5;
+}
+.right {
+    grid-area: 4 / 5 / 9 / 7;
+}
+.overlap {
+    grid-area: 6 / 4 / 8 / 6;
+    z-index: 5;
+}
+footer {
+    grid-area: 9 / 1 / 13 / 7;
+}
+
 
 
 
