--- a/index.css
+++ b/index.css
@@ -787,6 +787,16 @@ main {
     grid-auto-flow: column;
 }
 
+/*CSS 93*/
+.card-column {
+    display: grid;
+     align-content: space-between;
+     grid-template-rows: 20px repeat(5, 100px);
+     grid-auto-rows: 100px;
+}
+
+
+
 
 
 
