--- a/index.css
+++ b/index.css
@@ -795,7 +795,65 @@ main {
      grid-auto-rows: 100px;
 }
 
+/*CSS 94*/
+.grid {
+    display: grid;
+    width: 900px;
+    height: 3000px;
+    margin: auto;
+    grid-template: repeat(30, fr) / repeat(12, 1fr);
+}
 
+img{
+      max-width: 100%;
+}
+
+.a {
+      grid-area: 1 / 3 / 5 / 13; 
+}
+.b {
+    grid-area: 2 / 2 / 3 / 4;
+}
+.c {
+    grid-area: 4 / 1 / 5 / 4; 
+}
+.d {
+    grid-area: 5 / 1 / 12 / 7;
+}
+.e {
+    grid-area: 7 / 6 / 9 / 10;
+}
+.f {
+    grid-area: 9 / 7 / 10 / 10;
+}
+.g {
+    grid-area: 11 / 3 / 16 / 13;
+}
+.h {
+    grid-area: 12 / 2 / 14 / 5;
+}
+.i {
+    grid-area: 14 / 1 / 15 / 4;
+} 
+.j {
+    grid-area: 15 / 1/ 22 / 7;
+} 
+.k {
+    grid-area: 17 / 6 / 19 / 10;
+}
+.l {
+    grid-area: 19 / 7 / 20 / 9;
+}
+.m {
+    grid-area: 21 / 3 / 27 / 13;
+}
+.n {
+    grid-area: 22 / 2 / 24 / 5;
+}
+.o {
+    grid-area: 24 / 1 / 26 / 4;
+}
+  
 
 
 
